@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2015 - 2016, CEA
+* Copyright (c) 2019, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -113,7 +113,7 @@ protected:
 
   void ecrire(Sortie& ) const;
   void creer_alpha();
-  void calculer_alpha();
+  virtual void calculer_alpha();
 
   mutable int deja_associe;
 
