@@ -1,5 +1,5 @@
 /****************************************************************************
-* Copyright (c) 2015 - 2016, CEA
+* Copyright (c) 2019, CEA
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -145,7 +145,7 @@ protected :
   Champ_Don mu_sur_Sc,rho_gaz,rho_comme_v,rho_cp;
   mutable DoubleTab tab_W_old_;
   double omega_drho_dt_; // Facteur de relaxation sur drho_dt
-
+  Nom output_file_; // Fichier evolution (anciennement "evol_glob")
 
 };
 
