@@ -1,3 +1,4 @@
+XX/XX/18 (TRUST)  Bug fixed   : File evol_glob for quasi-compressible calculation renamed datacase_pbname.evol_glob
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.8 : Enhancements, modifications and corrected bugs since version 1.7.7 :
 --------------------------------------------------------------------------------------------------
